--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,5 @@ stages:
       displayName: Build and push an image to container registry
       inputs:
         containerRegistry: 'hariazurecontreg'
-        repository: '$(imageRepository)'
-        command: 'buildAndPush'
+        command: 'build'
         Dockerfile: '**/Dockerfile'
-        tags: '$(tag)'
