--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,9 +28,8 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
+    - task: PublishBuildArtifacts@1
       inputs:
-        containerRegistry: 'hariazurecontreg'
-        command: 'build'
-        Dockerfile: '**/Dockerfile'
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'drop'
+        publishLocation: 'Container'
